minor wording change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>Guess the Number!</h1>
-    <p>Can you guess the randomly generated number between 1-1000?  Hint: It's close to <span id="numberBelow"></span> and <span id="numberAbove"></span>.</p>
+    <p>Can you guess the randomly generated number between 1-1000?  Hint: It's between to <span id="numberBelow"></span> and <span id="numberAbove"></span>.</p>
 
     <input type="number" id="guessInput" min="1" max="1000" placeholder="Enter your guess" />
     <button onclick="checkGuess()" id="submitButton">Guess</button>
